menambahkan fitur tambah dan hapus catatan

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 
   <!-- END: Google Font -->
 
+  <!-- START: Google Icon -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!-- END: Google Icon -->
+
   <title>Aplikasi Catatan</title>
 </head>
 
